# gfx-plugin

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: component-ci.yml
ci/: build_standalone.py  ci_config.py  export_ci_config.py  prepare_android_tbb.py  prepare_rpi_toolchain.py  validate_artifacts.py  validate_repo.py
config/: ci_versions.json
docs/: DEVELOPMENT.md
include/ovx/gfx/: plugin.hpp
src/: CMakeLists.txt  plugin.cpp
tests/unit/: plugin_unit_test.cpp
tools/: gfx_rpi_vulkan_toolchain_builder.py
